cabal-version:      3.0
name:               advent2020
version:            0.1.0.0


common my-requires
    build-depends:
        base ^>= 4.16.4.0,
        text ^>= 2.1.1,
        persistent-vector ^>= 0.2.0,
        unordered-containers ^>= 0.2.20,
        array ^>= 0.5.4.0,
        -- transitive
        hashable ^>= 1.4.7.0,
        deepseq ^>= 1.4.6.1,
    default-language: Haskell2010

library advent2020-lib
    import: my-requires
    hs-source-dirs:   app
    exposed-modules: 
        AocPrelude,
        -- Day01,
        -- Day02,

executable advent2020
    import: my-requires
    main-is: Main.hs
    hs-source-dirs:   app
    build-depends:
        advent2020-lib
    default-language: Haskell2010
    other-modules:
        AocPrelude,
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11,
        Day12,
        Day13,
        Day14,
        Day15,
        Day16,
        Day17,
        Day18,
        Day19,
        Day20,
        Day21,
        Day22,

test-suite tests
    import: my-requires
    type:                exitcode-stdio-1.0
    hs-source-dirs:      tests
    build-depends:
        advent2020-lib,
        HUnit ^>= 1.6.2.0,
    main-is:             Suite.hs
    default-language: Haskell2010